Fix line height being too narrow for lists
This was making it difficult to distinguish them as touch targets.

--- a/static/assets/base.css
+++ b/static/assets/base.css
@@ -90,3 +90,6 @@ a:hover {
 :is(h1, h2, h3, h4, h5, h6) a {
   color: inherit;
 }
+
+ul, ol {
+  line-height: 1.5;
